<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SeekBar
        android:id="@+id/volume"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVolume" />

    <SeekBar
        android:id="@+id/difficulty"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDifficulty" />

    <TextView
        android:id="@+id/textVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Volume"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/volume"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Difficulty"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/difficulty"
        app:layout_constraintTop_toBottomOf="@+id/volume" />

    <Switch
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/Day"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/difficulty"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <Switch
        android:id="@+id/night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Night"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/difficulty"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:id="@+id/percentDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/difficulty"
        app:layout_constraintEnd_toEndOf="@+id/difficulty" />

    <TextView
        android:id="@+id/percentSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/difficulty"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:id="@+id/percentVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/volume"
        app:layout_constraintEnd_toEndOf="@+id/volume" />

</androidx.constraintlayout.widget.ConstraintLayout>